# tamu-whisper

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  tamuwhisper.py
src/transcribe/: __init__.py  transcribe.py
